--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,122 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.searchInputCtn {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+} 
+
+.searchInputCtn input {
+    width: 90vw;
+    padding: 5px 0;
+    font-size: 20px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.beerCard {
+    border: 1px lightgray solid;
+    display: flex;
+    align-items: center;
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.beerCard h4 {
+    color: gray;
+}
+
+.beerCardImgCtn {
+    width: 35vw;
+    display: flex;
+    justify-content: center;
+}
+
+.beerCardImgCtn img {
+    height: 35vw;
+}
+
+.beerCardInfoCtn {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 65vw;
+}
+
+
+
+.beerDetailsCtn {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.beerDetailsImgCtn {
+    display: flex;
+    justify-content: center;
+}
+
+.beerDetailsImgCtn img {
+    height: 40vh;
+}
+
+.simpleFlex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.brightGray {
+    color: gray;
+}
+
+.beerDetailsContributor {
+    color: rgb(129, 129, 129);
+    font-weight: bold;
+}
+
+
+.newBeerCtn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+
+.newBeerFrm {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.newBeerFrmInputCtn label {
+    padding-left: 15px;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.newBeerFrmInputCtn input {
+    border-radius: 16px;
+    border-color: rgb(233, 233, 233);
+    width: 80vw;
+    height: 30px;
+}
+
+.descriptionCtn input {
+    height: 150px;
+}
+
+.newBeerBtn {
+    display: flex;
+    justify-content: center;
+}
+
+.newBeerBtn button {
+    border-radius: 16px;
+    text-transform: uppercase;
+    color: white;
+    background-color: rgb(31, 132, 255);
+    text-align: center;
+    height: 40px;
+    width: 85vw;
 }
